nodePort-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: websocket-restapp-nodeport-service
  labels:
    app: websocket-restapp
spec:
  type: NodePort
  selector:
    app: websocket-restapp
  ports:
    - port: 8501
      targetPort: 8501
