albIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket-restapp-service
  labels:
    app: websocket-restapp
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: websocket-restapp-nodeport-service
                port: 
                  number: 8501
